# MarketInsight

./: README.md  main.py  package.json  pyproject.toml  render.yaml  requirements.txt
MarketInsight/components/: agent.py
MarketInsight/utils/: logger.py  tools.py
config/: config.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
